<resources>
    <string name="app_name">AkilTour V2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Calendrier</string>
    <string name="menu_gallery">Accueil</string>
    <string name="menu_slideshow">Mini-jeux</string>
    <string name="menu_tools">Mon compte</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Groupes</string>
    <string name="titleLoginActivity">Pour utiliser l\'application\nMerci de vous connecter</string>
    <string name="loginSigninPseudo">Pseudo</string>
    <string name="loginSigninPass">Password</string>
    <string name="loginSigninLoginBtn">Se connecter</string>
    <string name="signinLink">Pas encore inscrit ? Enregistrez-vous :)</string>
    <string name="SignInBtn">S\'enregistrer</string>
    <string name="gameDoubleButton1">:) Bouton 1 :)</string>
    <string name="gameDoubleButton2">:) Bouotn 2 :)</string>
    <string name="add_event_message">Votre message</string>
    <string name="add_event_button">Ajouter événement</string>
    <string name="controlPassword">veillez à utiliser au minimum 8 caractères contenant chiffres, majuscules et caractères spéciaux (@#$%^+=ù*¤£?!§°/²_çà)(¨µ:.,)</string>
    <string name="logOutButton">se deconnecter</string>
    <string name="menu_moncompte">Mon compte</string>
    <string name="modifyTitle">Modification de l\'évènement</string>
    <string name="modifDateBtn">modifier la date</string>
    <string name="modifyDate">Date :</string>
    <string name="modifHourBtn">Modifier l\'heure</string>
    <string name="menu_result">Résultats</string>
    <string name="menu_news">Canal de discussion</string>
    <string name="add_comment_title">Message</string>
</resources>
