<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_gallery">

    <fragment
        android:id="@+id/nav_news"
        android:name="com.kitusais.akiltourv2.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.kitusais.akiltourv2.ui.Calendrier.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.kitusais.akiltourv2.ui.accueil.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.kitusais.akiltourv2.ui.miniJeux.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.kitusais.akiltourv2.ui.compte.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_compte" />

    <fragment
        android:id="@+id/nav_result"
        android:name="com.kitusais.akiltourv2.ui.resultats.ResultatsFragment"
        android:label="@string/menu_result"
        tools:layout="@layout/result_fragment" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.kitusais.akiltourv2.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>